welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (aSmile==true) while (bSmile==true) {
                          ^monkeyTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (aSmile==true) while (bSmile==true) {
        ^